// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardListItem CardListItemの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミーカードの画像\\" class=\\"base-img--extend base-img--lg\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption class=\\"card-list-item__caption\\">
        <h2 class=\\"base-title\\">ダミーカード</h2>
        <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
      </figcaption>
    </figure> <a href=\\"https://takatechblog.netlify.app/\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
      WebSite
    </a>
  </article>
</div>"
`;

exports[`CardListItem CardListItemの初期値(linkなし): dummyCards 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミーカードの画像\\" class=\\"base-img--extend base-img--sm\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption class=\\"card-list-item__caption\\">
        <h2 class=\\"base-title\\">ダミーカード</h2>
        <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
      </figcaption>
    </figure>
    <!---->
  </article>
</div>"
`;
